# synapse

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  bb.edn  build.clj  deps.edn  package-lock.json  package.json  pyproject.toml  readme.md  shadow-cljs.edn  workspace.edn
.claude/: settings.local.json
.claude/commands/: add-module.md  add-playground.md
.lsp/: config.edn
.opencode/commands/: test-action-handler.md
.opencode/plans/: replicate-eval-to-clojure.md  test-coverage-plan.md
bases/agent-tui/: deps.edn
bases/agent-web/: deps.edn
bases/scene/: deps.edn
bases/web-app/: deps.edn
bases/ws-test/: README.md  client.mjs  deps.edn  package-lock.json  package.json
bb/: kill_port.clj
components/agent/: deps.edn
components/agent-eval/: deps.edn
components/agent-tools/: deps.edn
components/agent-tui-cljpy/: app.py  app_main.py
components/baml-client/: deps.edn  main.py  pyproject.toml
components/cljpy-main/: deps.edn
components/jetty-main/: deps.edn
components/kraken-ui/: deps.edn
components/language-learn/: deps.edn
components/llm-auth/: deps.edn
components/llm-eval/: README.md  deps.edn
components/login/: deps.edn
components/playground-copilotkit/agent-web/agent/: pyproject.toml
components/playground-copilotkit/agent-web/agent/src/: agent.py  draft.py
components/playground-drawflow/: defensive_error.md  deps.edn  package.json  refactor.md  todo.md
content/: index.md  static-pages.edn
docs/: clj-kondo-test-only-wrapper-actions.md  language-learn-testing-plan.md  progressive-enhancement.md  pure-functions-ui-testing.md
(+349 files in other folders)
